--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'org.graalvm.buildtools.native' version '0.10.4'
+    id 'com.gradleup.shadow' version '9.0.0-beta4'
 }
 
 repositories {
