--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'application'
     id 'org.graalvm.buildtools.native' version '0.10.4'
     id 'com.gradleup.shadow' version '9.0.0-beta4'
+    id "io.freefair.lombok" version "8.11"
+    id "com.diffplug.spotless" version "7.0.0.BETA4"
 }
 
 repositories {
@@ -21,4 +23,10 @@ java {
 
 application {
     mainClass = 'org.cobra.Main'
+}
+
+spotless {
+    java {
+        googleJavaFormat()
+    }
 }
